<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/id_detalleest"/>
        <EditText
            android:id="@+id/editId_detalleest"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_empleado"/>
        <EditText
            android:id="@+id/editId_empleado"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_especializacion"/>
        <EditText
            android:id="@+id/editId_especializacion"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_institutoestudio"/>
        <EditText
            android:id="@+id/editId_institutoestudio"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/anygraduacion"/>
        <EditText
            android:id="@+id/editAnygraduacion"
            android:inputType="number"
            android:maxLength="50" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertardetEstudio"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>