<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/id_empresa"/>
        <EditText
            android:id="@+id/editId_empresa"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nombre_empresa" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/dir_empresa" />
        <EditText
            android:id="@+id/editDir_empresa"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/tel_empresa" />
        <EditText
            android:id="@+id/editTel_empresa"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/cantoferta_empresa"/>
        <EditText
            android:id="@+id/editCantoferta_empresa"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>


    <TableRow>
        <Button
            android:onClick="actualizarEmpresa"
            android:text="@string/actualizar" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>

